packages/typ/tests/fixtures/diagnostics/0804_polyvar_closed_row_extra_pattern_05.ml
let use_epsilon : [ `A of int ] -> int = function
  | `A x -> x
  | `B -> 4
